# crafty-skins

./: .gitignore  README.md  SDXL_IC_LORA_README.md  download.py  example_usage.py  pose.py  pyproject.toml  requirements.txt  requirements_sdxl_lora.txt  skin.py  workflow.md
configs/: dataset.yaml
data/: .gitignore
data/raw/: metadata.jsonl
models/: .gitignore
src/: SDXL_ic_lora_inference.py  SDXL_ip_adapter_experiment.py  SDXL_ip_adapter_infer.py  flux_lora_inference.py  inference_common.py  inference_ip_adapter_sdxl.py  mask.py  skin.py  train.py  train_text_to_image_sdxl.py
src/crafty_skins/: inference.py  train_sdxl.py
src/dataset/: composite_generator.py  extract_post1.8_skins.py  generate_composites.py  prompt_generator.py
src/inference/: SDXL_ip_adapter_experiment.py  sdxl_ic_lora_inference.py
src/training/: requirements.txt  train_sdxl_ic_lora.py
